<resources>
    <string name="app_name">NavApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="green_box">Green Box</string>
    <string name="yellow_box">Yellow Box</string>
    <string name="go_back">Go Back</string>
    <string name="open_secret">Open Secret</string>
    <string name="generate_number">Generate Number</string>
    <string name="close_secret">Close Secret</string>
    <string name="close_the_whole_box">Close the Whole Box</string>
    <string name="this_is_a_secret_box">This Is A Secret Box</string>
</resources>